--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -88,6 +88,34 @@
 		"message": 		"Kommentieren",
 		"description":	"Content"
 	},
+	"content_followsyou":{
+		"message":		"Folgt dir",
+		"description":	"content"
+	},	
+	"content_pendingfreq":{
+		"message":		"Wartet auf Antwort",
+		"description":	"content"
+	},	
+	"content_blocking":{
+		"message":		"blockiert",
+		"description":	"content"
+	},	
+	"content_nofollow":{
+		"message":		"Folgt dir nicht",
+		"description":	"content"
+	},	
+	"content_following":{
+		"message":		"Du folgst",
+		"description":	"content"
+	},	
+	"content_waitfollow":{
+		"message":		"Du wartest auf zustimmung",
+		"description":	"content"
+	},	
+	"content_follow":{
+		"message":		"Folge",
+		"description":	"content"
+	},
 	"rate_first":{
 		"message":		"Du benutzt diese Extension schon eine ganze weile. Ich hoffe deine Erfahrungen mit ihr sind gut.",
 		"description":	"rate me"
