--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -116,6 +116,14 @@
 		"message":		"follow",
 		"description":	"content"
 	},
+	"content_loadmore":{
+		"message":		"load more",
+		"description":	"content"
+	},
+	"content_lastimage":{
+		"message":		"last image",
+		"description":	"content"
+	},
 	"rate_first":{
 		"message":		"You're been using this extension for a while now. I hope your experience is great.",
 		"description":	"rate me"
