--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -173,7 +173,7 @@
 		"description":	"option"
 	},
 	"opt_imageinfo_desc":{
-		"message":		"Alle Bilder kommen via Instagram™ und sind Eigentum des Nutzers. Wir haben keine Kontrolle über den Inhalt der Bilder.<br />Die Icons die wir in dieser Erweiterung nutzen unterliegen der Creative Commons Licence (by-nc-sa) und sind designed von Gentleface.com und Christian F. Burprich.",
+			"message":		"Alle Bilder kommen via Instagram™ und sind Eigentum des Nutzers. Wir haben keine Kontrolle über den Inhalt der Bilder.<br />Die Icons die wir in dieser Erweiterung nutzen unterliegen der Creative Commons Licence (by-nc-sa) und sind designed von Gentleface.com, Christian F. Burprich und YOOtheme(http://www.yootheme.com/)",
 		"description":	"option"
 	},
 	"opt_insta_options":{
