--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -169,7 +169,7 @@
 		"description":	"option"
 	},
 	"opt_imageinfo_desc":{
-		"message":		"All images come via Instagram™ and are owned by the uploader. We don't have control over the content of the photos.<br />The icons we use in this extension are under the Creative Commons Licence (by-nc-sa) and designed by Gentleface.com and Christian F. Burprich.",
+		"message":		"All images come via Instagram™ and are owned by the uploader. We don't have control over the content of the photos.<br />The icons we use in this extension are under the Creative Commons Licence (by-nc-sa) and designed by Gentleface.com, Christian F. Burprich and YOOtheme(http://www.yootheme.com/)",
 		"description":	"option"
 	},
 	"opt_insta_options":{
